--- a/visualization/index.html
+++ b/visualization/index.html
@@ -3,13 +3,12 @@
 <style>
 
 .node {
-  stroke: #fff;
-  stroke-width: 1.5px;
+  stroke: #000000;
+  stroke-width: 0.5px;
 }
 
 .link {
-  stroke: #999;
-  stroke-opacity: .6;
+  stroke-width:3px;
 }
 
 </style>
@@ -20,20 +19,28 @@
 var width = 960,
     height = 500;
 
-var color = d3.scale.linear()
-            .domain([ 0, 12 ])
-            .range(["#", "#d7191c"]);
-
-var force = d3.layout.force()
-    .charge(-120)
-    .linkDistance(30)
-    .size([width, height]);
-
 var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
-
+  
 d3.json("news.json", function(error, graph) {
+  var size = d3.scale.log()
+              .domain([ graph.min_influence, graph.max_influence ])
+              .range([5, 15]);
+ 
+  var linkcolor = d3.scale.sqrt()
+      .domain([graph.min_similarity,graph.max_similarity])
+      .range(["yellow", "blue"]);
+ 
+  var color = d3.scale.sqrt()
+              .domain([ graph.min_degree, graph.max_degree ])
+              .range(["grey", "red"]);
+  
+  var force = d3.layout.force()
+      .charge(-120)
+      .linkDistance(50)
+      .size([width, height]);
+
   force
       .nodes(graph.nodes)
       .links(graph.links)
@@ -43,13 +50,15 @@ d3.json("news.json", function(error, graph) {
       .data(graph.links)
     .enter().append("line")
       .attr("class", "link")
-      .style("stroke-width", function(d) { return Math.sqrt(d.value); });
+      .style("stroke", function(d) { return linkcolor(d.value);} );
 
+  link.append("title")
+      .text(function(d) { return d.value; });
   var node = svg.selectAll(".node")
       .data(graph.nodes)
     .enter().append("circle")
       .attr("class", "node")
-      .attr("r", 5)
+      .attr("r", function(d) { return size(d.size); })
       .style("fill", function(d) { return color(d.degree); })
       .call(force.drag);
 
