--- a/visualization/index.html
+++ b/visualization/index.html
@@ -32,9 +32,14 @@ d3.json("news.json", function(error, graph) {
       .domain([graph.min_similarity,graph.max_similarity])
       .range(["yellow", "blue"]);
  
-  var color = d3.scale.sqrt()
+  var color;
+
+  if (graph.color === "clusters") 
+    color = d3.scale.sqrt()
               .domain([ graph.min_degree, graph.max_degree ])
               .range(["grey", "red"]);
+  else
+     color = d3.scale.category20();
   
   var force = d3.layout.force()
       .charge(-120)
@@ -59,7 +64,7 @@ d3.json("news.json", function(error, graph) {
     .enter().append("circle")
       .attr("class", "node")
       .attr("r", function(d) { return size(d.size); })
-      .style("fill", function(d) { return color(d.degree); })
+      .style("fill", function(d) { return color(d.color_value); })
       .call(force.drag);
 
   node.append("title")
