--- a/second_stage/visualization/correlation_communities.html
+++ b/second_stage/visualization/correlation_communities.html
@@ -42,7 +42,7 @@
 
       $(function() {
         
-        d3.json("communities.json", function(error, graph) {
+        d3.json("correlation_communities.json", function(error, graph) {
        
           var width = 1000,
               height = 600;
