oops, forgot to commit/push stuff

--- a/first_stage/visualization/vocab_communities.html
+++ b/first_stage/visualization/vocab_communities.html
@@ -11,7 +11,7 @@
     <div class="container centered">
         <div class="row">
             <div class="span4 collapse-group">
-                <center><h1>Vocabulary similarity graph for Chilean News Outlets
+                <center><h1>Vocabulary-based communities for Chilean News Outlets
                         in Twitter</h1>
                 </center>
                 <br/>
