--- a/second_stage/visualization/correlation_communities.html
+++ b/second_stage/visualization/correlation_communities.html
@@ -11,7 +11,7 @@
     <div id="container" class="container centered">
         <div class="row">
             <div class="span4 collapse-group">
-        <h1>Example of community detection for "corrupcion+penta+udi"</h1>
+        <h1>Example of time-series-based community detection for "corrupcion+penta+udi"</h1>
 
         <p>This was built using a minimum of 2 data points, a minimum
         correlation of 0.231 and no restrictions on the sensitivity to singular
