--- a/05 - Owners/visualization/ownership_communities_edges.html
+++ b/05 - Owners/visualization/ownership_communities_edges.html
@@ -23,7 +23,7 @@
             <div class="col-md-6">
                 <div class="row">
                     <div class="col-md-6">
-                        Maximum number of edges:
+                        Minimum Similarity:
                     </div>
                     <div class="col-md-6">
                         <input type="range" id="slider"
@@ -135,7 +135,8 @@
               .call(force.drag);
 
           node.insert("title")
-              .text(function(d) { return d.name });
+              .text(function(d) { return d.name + " (community " + d.color_value
+              + ")"});
           node.exit().remove();
 
           var color = d3.scale.category20();
