--- a/04 - Followers/visualization/followers_communities_edges.html
+++ b/04 - Followers/visualization/followers_communities_edges.html
@@ -78,7 +78,7 @@
           .domain([0,1])
           .range(["gray", "red"]);
 
-          graph.links.sort(function(a, b) { return b.value[0] - a.value[0]; } );
+          graph.links.sort(function(a, b) { return b.values[0] - a.values[0]; } );
           var nodes = graph.nodes;
           var links = [];
 
@@ -182,7 +182,7 @@
               for (var i = 0; i < n_edges; i++) {
                   var link = graph.links[i];
 
-                  if (link.value === 0.0) {
+                  if (link.values[0] === 0.0) {
                       break;
                   }
                   var sourceNode = findNode(link.source);
@@ -191,7 +191,7 @@
                   var newLink = {
                       "source" : sourceNode,
                       "target" : targetNode,
-                      "value"  : link.value
+                      "value"  : link.values
                   }
                   links.push(newLink);
               }
