--- a/06 - Recommendation/visualization/index.html
+++ b/06 - Recommendation/visualization/index.html
@@ -9,10 +9,11 @@
     <script src="js/jquery-1.11.3.js" type="text/javascript"></script>
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/jquery.validate.min.js" type="text/javascript"></script>
+    <script src="js/d3.v3.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row" id="userdata-row" >
         <div class="col-md-offset-3 col-md-6">
         <div class="page-header">
             <h1>Recommendation proof-of-concept</h1>
@@ -41,14 +42,59 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group-row">
+            <div class="form-group row">
                 <div class="col-md-offset-2 col-md-10">
-                <button class="btn" type="submit" id="randomize">Try it!</button>
+                <button class="btn randomize" type="submit" id="try">Try it!</button>
                 </div>
             </div>
         </form>
         </div>
-        </section>
+        </div>
+
+        <div class="row hidden option-title" id="template-title-row">
+        <div class="col-md-offset-2 col-md-6">
+        <h3 class="title"></h3>
+        </div>
+        </div>
+        <div class="row hidden option-content" id="template-text-row">
+        <div class="col-md-offset-2 col-md-4">
+            <p>We found <span class="n">n</span> groups of similar news media
+            outlets when grouping them according to a <span class="criterion"></span> 
+            criterion. Click on a group to see some of the media outlets in
+            it.</p> 
+        </div>
+        <div class="col-md-4">
+            <p>The following is your consumption with respect to the same
+            criterion:</p>
+        </div>
+        </div>
+        <div class="row hidden option-content" id="template-content-row">
+        <div class="col-md-offset-2 col-md-4">
+            <div class="chart centerBlock">
+            <svg class="groups pie"
+                 width="200"
+                 height="200"
+                 viewBox="0 0 200 200"
+                 preserveAspectRatio="xMidYMid meet">
+            </svg>
+            </div>
+            <h4 class="hidden">Sample outlets:</h4>
+            <ul>
+            </ul>
+        </div>
+        <div class="col-md-4">
+            <div class="chart centerBlock">
+            <svg class="user-consumption pie"
+                 width="200" 
+                 height="200"
+                 viewBox="0 0 200 200"
+                 preserveAspectRatio="xMidYMid meet">
+            </svg>
+            </div>
+            <h4 class="hidden">Sample outlets:</h4>
+            <ul>
+            </ul>
+        </div>
         </div>
         <div class="row hidden" id="results-row">
         <div class="col-md-offset-3 col-md-6">
@@ -60,13 +106,26 @@
         <ul id="results">
         </ul>
         <p>
-        Click on "Try it!" again if you want to see a different set of
+        Click on "Try again!" again if you want to see a different set of
         suggestions!
         </p>
+        <div class="centerBlock">
+        <button class="btn randomize" type="button" id="again">Try again!</button>
+        </div>
+        <br/>
         </div>
         </div>
         </div>
+    </div>
+    <div class="tooltip">
+        <div class="title"> </div>
+        <div class="size"> </div>
+    </div>
+
     <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
+    <script src="js/recommendation-util.js" type="text/javascript"></script>
+    <script src="js/recommendation-stats.js" type="text/javascript"></script>
+    <script src="js/recommendation-compute.js" type="text/javascript"></script>
     <script src="js/recommendation.js" type="text/javascript"></script>
 </body>
 </html>
